--- a/TouristProject/index.html
+++ b/TouristProject/index.html
@@ -57,6 +57,7 @@
                 </div>
             </form>
         </div>
+        <button type="button" id="findMe">FindME</button>
         <div id="map" style="width:100%;height:400px; margin-top: 50px;">My map will go here</div>
     </div>
 
