--- a/TouristProject/index.html
+++ b/TouristProject/index.html
@@ -69,7 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL_wefSglwBxpRWL8XIC9qYD2M1uyWr4c&callback=myMap"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL_wefSglwBxpRWL8XIC9qYD2M1uyWr4c"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL_wefSglwBxpRWL8XIC9qYD2M1uyWr4c&libraries=places"></script>
 </body>
 
 </html>
